[package]
name = "indeed"
version = "0.3.0"
edition = "2021"
authors = ["Axlefublr"]
license = "MIT"
description = "Add strings to a file on their own lines, if they aren't already there."
readme = "README.md"
homepage = "https://github.com/Axlefublr/indeed"
repository = "https://github.com/Axlefublr/indeed"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
