[package]
name = "indeed"
version = "0.4.0"
edition = "2021"
authors = ["Axlefublr"]
license = "MIT"
description = "Append lines to a file with no shell bullshit."
readme = "README.md"
homepage = "https://github.com/Axlefublr/indeed"
repository = "https://github.com/Axlefublr/indeed"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.11", features = ["derive", "wrap_help"] }
